# axum-service-checklist

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  docker-otel.local.yml  install_local_dynamodb.sh
.github/workflows/: ci.yml
src/: main.rs  test.rs  user.json  users.json
