[package]
name = "service"
publish = false
version = "0.1.0"
edition = "2021"
rust-version = "1.62.1"
license = "MPL-2.0"

[dependencies]
axum = "0.5"
hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_with = "1.14.0"
assert-json-diff = "2.0.1"
regex = "1"
chrono= "0.4.19"
uuid = { version = "1.1.2", features = ["v4"] }

# AWS
aws-sdk-dynamodb = "0.16.0"
aws-config = "0.46.0"
aws-types = "0.46.0"

# Tracing and OTEL
tracing = "0.1.35"
tracing-opentelemetry = "0.17"
http = "0.2.8"
tower = "0.4.13"
tower-http = { version = "0.3", features = ["trace"] }
axum-tracing-opentelemetry = { version = "0.4", features = ["otlp"] }
opentelemetry-otlp = { version = "0.10" }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
] }
opentelemetry = { version = "0.17", features = ["rt-tokio", "serialize"] }