[package]
name = "service"
publish = false
version = "0.1.0"
edition = "2021"
rust-version = "1.62.1"
license = "MPL-2.0"

[dependencies]
axum = "0.5.4"
# A fast and correct HTTP library.
hyper = { version = "0.14.17", features = ["full"] }
# Event-driven, non-blocking I/O platform.
tokio = { version = "1.17.0", features = ["full"] }
# Modular reusable components for building robust clients and servers.
tower = "0.4.12"
# A serialization/deserialization framework.
serde = { version = "1.0.136", features = ["derive"] }
# Serde serializion/deserialization of JSON data.
serde_json = "1.0.79"
# Types for HTTP requests and responses.
http = "0.2.6"
# Application-level tracing for Rust.
tracing = "0.1.32"
# Utilities for implementing and composing `tracing` subscribers.
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }